edit spacing issue fixed

--- a/themes/gauge_theme/static/css/theme.css
+++ b/themes/gauge_theme/static/css/theme.css
@@ -832,9 +832,10 @@ header.top::after {
 .edit-page a::before {
   content: url("../img/github-brands.svg");
   width: 16px;
-  right: 6px;
+  right: 0px;
   position: relative;
   display: inline-block;
+  padding-left:0px;
 }
 
 .foolinks .github-icon::before {
@@ -1072,7 +1073,6 @@ img {
 
 .edit-page {
   text-align: left;
-  width: 100%;
   line-height: normal;
   position: relative;
   top: 40px;
@@ -1369,13 +1369,6 @@ p.experimental-feature::before {
   display: flex;
 }
 
-.mobile-local-toc {
-  flex:1;
-}
-.edit-page {
-  flex:3;
-}
-
 .docs-container.no-right-bar .edit-page {
   text-align: right;
 }
@@ -1458,7 +1451,6 @@ p.experimental-feature::before {
   .mobile-local-toc {
     text-align: left;
     padding-left: 25px;
-    width: 100%;
   }
 
   .mobile-local-toc.collapsed + ul{
@@ -1621,7 +1613,7 @@ p.experimental-feature::before {
 
   .edit-page {
     display: inline-block;
-    top:15px;
+    top:16px;
   }
   #proj-setup-filter-section .applied-filters .applied-filter {
     padding: 0 6px;
@@ -1999,13 +1991,6 @@ p.experimental-feature::before {
     grid-template-columns: 260px 45em auto;
     grid-column-gap: 5px;    
     overflow-x: hidden;
-  }
-
-  .mobile-local-toc {
-    flex:1;
-  }
-  .edit-page {
-    flex:2;
   }
 
   .mobile-local-toc.collapsed + ul{
